array.island.Island.scala.error
Compilation error:
Island:16: error: not found: value ofDim
  var levels = ofDim[Boolean](max-min+1);
               ^